--- a/app/src/main/res/layout/activity_startup.xml
+++ b/app/src/main/res/layout/activity_startup.xml
@@ -11,7 +11,6 @@
         android:id="@+id/button"
         android:layout_width="357dp"
         android:layout_height="49dp"
-        android:background="@drawable/btn"
         android:fontFamily="@font/bold"
         android:text="Get Started"
         android:onClick="signup"
@@ -26,7 +25,7 @@
         android:id="@+id/button3"
         android:layout_width="357dp"
         android:layout_height="49dp"
-        android:background="@drawable/secondary_btn"
+        android:background="@drawable/transparent"
         android:fontFamily="@font/bold"
         android:text="Log In"
         android:onClick="login"
