--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -57,6 +57,7 @@
         android:hint="Enter email"
         android:inputType="textEmailAddress"
         android:paddingStart="15dp"
+        android:paddingEnd="15dp"
         android:textSize="13dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView16"
@@ -73,6 +74,7 @@
         android:hint="Enter password"
         android:inputType="textPassword"
         android:paddingStart="15dp"
+        android:paddingEnd="15dp"
         android:textSize="13dp"
         app:endIconMode="password_toggle"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -116,6 +118,7 @@
         android:hint="Confirm password"
         android:inputType="textPassword"
         android:paddingStart="15dp"
+        android:paddingEnd="15dp"
         android:textSize="13dp"
         app:endIconMode="password_toggle"
         app:layout_constraintBottom_toBottomOf="parent"
