--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,7 +23,7 @@
         <EditText
             android:id="@+id/editTextTextPersonName2"
             android:layout_width="358dp"
-            android:layout_height="43dp"
+            android:layout_height="47dp"
             android:layout_marginTop="26dp"
             android:layout_marginBottom="22dp"
             android:background="@drawable/textboxbg"
@@ -32,6 +32,7 @@
             android:hint="Where are you?"
             android:inputType="textPersonName"
             android:paddingStart="15dp"
+            android:paddingEnd="15dp"
             android:textSize="14dp"
             app:layout_constraintBottom_toTopOf="@+id/imageView19"
             app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +66,7 @@
             android:fontFamily="@font/bold"
             android:text="Hi, Ray! 👋"
             android:textColor="#FBFBFB"
-            android:textSize="28.67sp"
+            android:textSize="27sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.064"
             app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +78,8 @@
             android:layout_height="67dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/medium"
-            android:textSize="14dp"
+            android:textSize="13dp"
+            android:lineHeight="18dp"
             android:text="Stuck on the road without any help, save time by tapping on the button below"
             android:textColor="#FAFAFA"
             app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +129,7 @@
             android:id="@+id/imageView21"
             android:layout_width="111.36dp"
             android:layout_height="99.23dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="38dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView19"
@@ -181,25 +183,12 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="18dp"
                 android:layout_marginTop="10dp"
+                android:lineHeight="18dp"
                 android:layout_marginEnd="23dp"
                 android:fontFamily="@font/regular"
                 android:text="These tips will help you in case you find yourself in the case of your vehicle breaking down."
                 android:textColor="@color/gray"
-                android:textSize="14dp" />
-
-            <ImageView
-                android:id="@+id/imageView24"
-                android:layout_width="108dp"
-                android:layout_height="26dp"
-                android:layout_below="@+id/textView26"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginEnd="231dp"
-                android:layout_marginBottom="26dp"
-                app:srcCompat="@drawable/seetips" />
+                android:textSize="13dp" />
 
             <TextView
                 android:id="@+id/textView25"
@@ -208,12 +197,24 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="17dp"
+                android:layout_marginStart="18dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="149dp"
                 android:fontFamily="@font/bold"
                 android:text="Need some tips?"
-                android:textSize="20dp" />
+                android:textSize="17dp" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView26"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="18dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="20dp"
+                android:text="See tips" />
 
         </RelativeLayout>
 
